[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Quai.gd" type="Script" id=1]
[ext_resource path="res://scenes/DockPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Pier.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 8.14513 )

[node name="Quai" type="StaticBody"]
script = ExtResource( 1 )

[node name="Pier" parent="." instance=ExtResource( 3 )]

[node name="DockPoint" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, 8.01101 )

[node name="DockPoint2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, 0.0102355 )

[node name="DockPoint3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.916585, 0.396705, -8.07057 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.825564, -0.000560641 )
shape = SubResource( 1 )

[connection signal="action" from="DockPoint" to="." method="_on_DockPoint_action"]
[connection signal="mooring_off" from="DockPoint" to="." method="_on_DockPoint_mooring_off"]
[connection signal="mooring_on" from="DockPoint" to="." method="_on_DockPoint_mooring_on"]
[connection signal="action" from="DockPoint2" to="." method="_on_DockPoint_action"]
[connection signal="mooring_off" from="DockPoint2" to="." method="_on_DockPoint_mooring_off"]
[connection signal="mooring_on" from="DockPoint2" to="." method="_on_DockPoint_mooring_on"]
[connection signal="action" from="DockPoint3" to="." method="_on_DockPoint_action"]
[connection signal="mooring_off" from="DockPoint3" to="." method="_on_DockPoint_mooring_off"]
[connection signal="mooring_on" from="DockPoint3" to="." method="_on_DockPoint_mooring_on"]
